// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-media-type should handle non-existent media type 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Not Found","status":404,"detail":"The specified media type was not found","operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`move-media-type should move a media type to a folder 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`move-media-type should move a media type to root 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
